# Towards_SE

./: .gitignore  error_file.txt
Algorithmic_problems/: set_1.py
Algorithms/Algorithmic_problems/: HR_1_week_prep.py  HR_1_week_prep_v2.py  set_1.py
Algorithms/GFG/backtracking/: easy.py  medium.py
Algorithms/Learning/: DP_learn.ipynb  DP_learn.py  Trees.ipynb  practice_DP.py
Algorithms/NeetCodeRoadMap/: 1-dDP.py  2-dDP.py  Arrays_Hashing.py  Trees.py  backtracking.py  binary_search.py  linked_list.py  sliding_window.py  two_pointers.py
Algorithms/codeforces/: file1.py
Algorithms/general_algos/: search.py
Algorithms/leet_code_top_100_liked_questions/: set_1.py  set_2.py
ComputerScience/Databases/DataBaseSystemConcepts/: DDL+drop.sql  SQL_Chapters.md  chapter1.md  chapter2.md  sql_scripts.sql
ComputerScience/Os/C/: CMakeLists.txt  main
ComputerScience/Os/C/playground/: main.c  playground.c
ComputerScience/Os/C/playground/dataStructures/linear/: linked_list.c
ComputerScience/Os/C/playground/headers/dataStructures/linear/: linked_list.h
ComputerScience/Os/C/playground/headers/generalUtils/: array_utils.h  math_utils.h
Information_retrieval/Uni_course/: 01 - Crawling lab.ipynb  Ayhem_Bouabid.ipynb  assignment3_final.ipynb  assignment_1.ipynb  assignment_2_AyhemBouabid.ipynb  clean_the_mess.py  hm3.ipynb  lec_notes_1.ipynb
Information_retrieval/Uni_course/labs/: 08_Indexing_with_Graph.ipynb
Information_retrieval/personal_learning_book/chap1_bool_retrieval/: theo.ipynb
LearnC++/: CMakeLists.txt  add.cpp  arrays.cpp  calculator.cpp  chapt1.cpp  chapt2.cpp  chapt4.cpp  compound_types.cpp  containers.cpp  containers.h  functions.cpp  header.h  input.cpp  linked_lists.cpp  main  main.cpp  operators.cpp  strings.cpp
LearnC++/CustomDS/: ArrayList.h  DLL.cpp  DLL.h  dll.cpp  dll.h  list.cpp  list.h
LearnC++/CustomDS/algorithms/: search.h
LearnC++/CustomDS/data_structures/: ArrayList.h  DLL.h  list.h
LearnC++/CustomDS/data_structures/linear/: ArrayList.h  DLL.h  list.h
LearnC++/CustomDS/data_structures/trees/: binaryTree.h  tree.h
LearnC++/CustomDS/iterators/: iterators.h
LearnC++/DataStructures/: BST.cpp  BST.h  linked_list.cpp  linked_list.h
LearnC++/GeneralProgramming/: iterators.h  templates.cpp
LearnC++/ProblemSolving/: BST.cpp  BST.h  Stack.cpp  linked_list.cpp  tree.cpp
LearnC++/ProblemSolving/DivideAndConquer/: problems_set1.cpp  problems_set1.h
LearnC++/ProblemSolving/strings/: basics.cpp  basics.h
LearnC++/ProblemSolving/trees/: file1.h
LearnC++/learnCppTutorials/: arrays.cpp  arrays.h  chapt2.cpp  compond_types.h  compound_types.cpp  functions.cpp  functions.h  strings.h
LearnC++/oop/: more_inheritance.h  oop_inheritance.h  oop_more.cpp  oop_more.h  oop_starter.cpp  oop_starter.h  poly.cpp  poly.h
LearnC++/small_game/: game_objects.h  game_play.cpp  game_play.h  random.h  utilities.cpp  utilities.h
Meta_backend_dev_specialization/course_1_intro_to_backend/: notes.ipynb
Meta_backend_dev_specialization/course_1_intro_to_backend/HTML/: basic_index.html
Meta_backend_dev_specialization/course_1_intro_to_backend/HTML_CSS/: basic_index.html  hypter_text_index.html  notes.ipynb
More_Python/: argparse_mod.py  beautifulsoup.ipynb
More_Python/PyQT/Calculator/: PyCalc.py  getting_started.py
More_Python/PyQT/Labeler/: labeler.py
More_Python/requests_package/: requests_playground.py
ProblemSolving/Cpp/: CMakeLists.txt  main  main.cpp  utils.cpp  utils.h
ProblemSolving/Cpp/arrays/: dequeue.cpp  dequeue.h  hash_map_set.cpp  hash_map_set.h  must_do.cpp  must_do.h  prefixArray.cpp  prefixArray.h  prefixSum.cpp  prefixSum.h  searching.cpp  searching.h
ProblemSolving/Cpp/backtracking/: bt1.cpp  bt1.h
ProblemSolving/Cpp/dp/: dp1.cpp  dp1.h
ProblemSolving/Cpp/graph/: basics.cpp  basics.h  easy_gfg.cpp  easy_gfg.h  neetcode.cpp
ProblemSolving/Cpp/greedy/: g1.cpp  g1.h
ProblemSolving/Cpp/linked_lists/: file1.cpp  file1.h
ProblemSolving/Cpp/trees/: common.cpp  common.h  file1.cpp  file1.h  file2.cpp  file2.h
ProblemSolving/Cpp/trees/heaps/: leetcode.h
ProblemSolving/Cpp/twoPointers/: file1.cpp  file1.h
ProblemSolving/Python/: file.ipynb  file.py  file2.py  math_utils.py  run.py  utils.py
ProblemSolving/Python/NeetCodeRoadMap/: 1-dDP.py  Arrays_Hashing.py  backtracking.py  binary_search.py  stack.py
ProblemSolving/Python/arrays/: 2arrays.py  ad_hoc.py  arrays.py  hash_map_set.py  kadanes_algo.py  medium.py  must_do.py  prefixArray.py  sorting.py  twoPointers.py
ProblemSolving/Python/backtracking/: easy.py  hard.py  medium.py  standard.py
ProblemSolving/Python/bits_operations/: file1.py
ProblemSolving/Python/div_and_con/: dc1.py
ProblemSolving/Python/dp/: dp1.py
ProblemSolving/Python/graphs/: common.py  gfg1.py  neetcode.py
ProblemSolving/Python/greedy/: grd1.py
ProblemSolving/Python/hashing/: gfg1.py  test_hash.py
ProblemSolving/notes/: hash.md
SpringAcademy/restaurant_reward_network/: build.gradle  settings.gradle
Uni_assignments/itp2024/: CMakeLists.txt  main.cpp
backend_projects/Car Sharing/: build.gradle
backend_projects/Car Sharing1/: build.gradle
backend_projects/QuizzEngine/: course-remote-info.yaml
backend_projects/java/: quizdb.mv.db  quizdb.trace.db
backend_projects/java2/: course-remote-info.yaml
backend_projects/test_email/: build.gradle  settings.gradle
data_engineering/NYC_taxi_trips_data_pipeline/: compose.yml  file.py
front-end-projects/jetbrainAcademy/: package-lock.json
golang/: readme.md
golang/_git_control/: go.mod
golang/first_module/: go.mod  main.go
golang/first_project/: main.go  submission_one.go  submission_two.go
golang/learning/: another_main.go  main.go  main2.go
golang/uni_admission_program/: go.mod  main.go
shell/: created_by_vim_file.txt  helloWorld.sh  output.txt  user_envs.txt  yet_another_file.txt
shell/scripting_mini_projects/: file.sh  file_analyzer.sh  interactive_greeting_script.sh  string_utils.sh
shell/the_shell_scripting_tut/: for_looping.sh  getting_input.sh  hello_world.sh  my_var2.sh  my_var3.sh
(+396 files in other folders)
