cmake_minimum_required(VERSION 3.27)
project(LearnC__)

set(CMAKE_CXX_STANDARD 20)

add_executable(LearnC__ main.cpp
        containers.cpp
        learnCppTutorials/strings.cpp
        arrays.cpp
        learnCppTutorials/compound_types.cpp
        ProblemSolving/linked_list.cpp
        ProblemSolving/Stack.cpp
        ProblemSolving/linked_list.h
        ProblemSolving/BST.cpp
        ProblemSolving/BST.h
        containers.h
        oop/oop_starter.cpp
        oop/oop_starter.h
        oop/oop_inheritance.h
        learnCppTutorials/functions.cpp
        learnCppTutorials/functions.cpp
        learnCppTutorials/functions.cpp
        learnCppTutorials/functions.h
        learnCppTutorials/compond_types.h
        CustomDS/DLL.h
        CustomDS/DLL.cpp
        oop/oop_more.h
        oop/oop_more.cpp
        oop/more_inheritance.h
        small_game/game_objects.h
        small_game/game_play.h
        small_game/random.h
        small_game/utilities.cpp
        small_game/utilities.h
        small_game/game_play.cpp
        oop/poly.h
        oop/poly.cpp
        ../Uni_assignments/itp2024/main.cpp
        ../Uni_assignments/itp2024/labs/objects.h
        ../Uni_assignments/itp2024/labs/objects.cpp
        CustomDS/list.h
        CustomDS/list.cpp
        learnCppTutorials/arrays.cpp
        learnCppTutorials/arrays.h
        CustomDS/ArrayList.h
        learnCppTutorials/strings.h
        functions.cpp
        GeneralProgramming/iterators.cpp
        GeneralProgramming/iterators.h
        GeneralProgramming/templates.cpp)

